--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 Current Development Team:
-Lance Haynie <lance@hayniemail.com
+Lance Haynie <lance@hayniemail.com>
 
 Contributing Software:
 Arduino RTTY Transmitter - https://github.com/farroid/arduino-rtty-transmitter
