added contributing software

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,4 @@ Lance Haynie <lance@hayniemail.com>
 
 Contributing Software:
 Arduino RTTY Transmitter - https://github.com/farroid/arduino-rtty-transmitter
+RadioHead Packet Radio Library - http://www.airspayce.com/mikem/arduino/RadioHead/
